fix syntax error

--- a/example/getting_started.ipynb
+++ b/example/getting_started.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "The expected format is a set of JSON files compressed in the .gz format. Each JSON file contains metadata related to a newsletter, magazine, etc., as well as a list of article titles and their corresponding bodies. These files may be organized within different folders or sub-folders.\n",
     "Below is a snapshot of the JSON file format:\n",
-    "\n"
+    "\n",
+    "```commandline\n",
     "{\n",
     "    \"newsletter_metadata\": {\n",
     "        \"title\": \"Newspaper title ..\",\n",
